# Ai_Study_Body

./: .gitignore  README.md  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3  ingestion_manifest.json
eval/: questions.jsonl  run_eval.py
src/study_buddy/: __init__.py  app.py  cli.py  config.py  ingest.py  models.py  qa.py  retriever.py  vectorstore.py
src/study_buddy/prompts/: rag_prompt.txt
tests/: test_chunking.py  test_cli.py  test_config.py  test_retriever.py
